--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://plignel.github.io"
 
 github:
-  username:PierreLignel # change to your GitHub username
+  username: PierreLignel # change to your GitHub username
 
 
 
@@ -100,7 +100,8 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 
+avatar: /assets/img/photo_presentation.jpg
+
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
