--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -6,7 +6,7 @@
 
 - type: github
   icon: "fab fa-github"
-
+  url: "https://github.com/PierreLignel"
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
