--- a/_config.yml
+++ b/_config.yml
@@ -100,7 +100,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/photo_presentation.jpg
+avatar: /assets/img/photo_presentation.jpeg
 
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
